# audio-player

./: .gitignore  CMakeLists.txt
cmake/: CMakeLists.txt.in
src/audio-player/: CMakeLists.txt  format.h  main.cpp
